--- a/views/partials/admin/header.ejs
+++ b/views/partials/admin/header.ejs
@@ -61,6 +61,12 @@
                     </a>
                     
                 </li>
+                <li class="menu-item ">
+                    <a class="menu-link" href="/admin/orders"> <i class="icon material-icons md-add_box"></i>
+                        <span class="text">Orders</span>
+                    </a>
+                    
+                </li>
                 <!-- <li class="menu-item ">
                     <a class="menu-link" href="/add-product"> <i class="icon material-icons md-add_box"></i>
                         <span class="text">Add product</span>
