--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -43,7 +43,7 @@
 
 <!-- sweet alert -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
-
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </head>
 
